tests/functional/lang/eval-fail-any-3.err.exp
error:
       … while calling the 'any' builtin
         at /pwd/lang/eval-fail-any-3.nix:1:1:
            1| builtins.any (_: 1) [ "foo" ]
             | ^
            2|

       … while evaluating the return value of the function passed to builtins.any

       error: expected a Boolean but found an integer: 1
